0.12/_sources/checks_gallery/tabular/model_evaluation/plot_model_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_model_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py:


.. _plot_tabular_model_info:

Model Info
***********

This notebook provides an overview for using and understanding the Model Info check.

**Structure:**

* `What is the Model Info check? <#what-is-the-model-info-check>`__
* `Run the check <#run-the-check>`__


What is the Model Info check?
================================
The ``ModelInfo`` check produces a summary for the model parameters (number of estimators,
learning rate, verbosity etc.).

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Imports
=============

.. GENERATED FROM PYTHON SOURCE LINES 26-30

.. code-block:: default

    from sklearn.ensemble import AdaBoostClassifier

    from deepchecks.tabular.checks import ModelInfo








.. GENERATED FROM PYTHON SOURCE LINES 31-33

Run the check
===============

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: default

    clf = AdaBoostClassifier(learning_rate=1.2)
    ModelInfo().run(clf)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2023 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Model Info</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"bbed66f9479f47da902698adcdde948c": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_62d318c0e77f4b00aa686c34a82f4c05", "IPY_MODEL_5d94d41971eb4b728808aae608d95c95", "IPY_MODEL_65fac1b733d34a798d18f545e326d551", "IPY_MODEL_4e99c228499f46a28f62a1e3ba9c0f80"], "layout": "IPY_MODEL_d6fed14af2c94e7e9f4805767c4e514b"}}, "62d318c0e77f4b00aa686c34a82f4c05": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_debb8c0bcef44216816b5f2611486bff", "style": "IPY_MODEL_eabe40099747400ea92078b3c5635831", "value": "<h4><b>Model Info</b></h4>"}}, "debb8c0bcef44216816b5f2611486bff": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "eabe40099747400ea92078b3c5635831": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "5d94d41971eb4b728808aae608d95c95": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_251a8e4eef6a47d3a4016ffae38423fb", "style": "IPY_MODEL_b75b9b81ea0944ec9bab3287833531d0", "value": "<p>Summarize given model parameters. <a href=\"https://docs.deepchecks.com/0.12/checks_gallery/tabular/model_evaluation/plot_model_info.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "251a8e4eef6a47d3a4016ffae38423fb": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "b75b9b81ea0944ec9bab3287833531d0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "65fac1b733d34a798d18f545e326d551": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_24b4d1546d43493cbb1f9602b254149e", "style": "IPY_MODEL_e59c43f751d9420fa7a14b8abe38cb89"}}, "24b4d1546d43493cbb1f9602b254149e": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "e59c43f751d9420fa7a14b8abe38cb89": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "4e99c228499f46a28f62a1e3ba9c0f80": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_8455b7440cb74501b6c7e22c78f7cc52", "IPY_MODEL_2038db803a6c4585a97aa8a051d3f206", "IPY_MODEL_230a8dcbcba046bfb8835d6b5c4c12c9", "IPY_MODEL_86f2e7ed77ed48638906bd68b6c54aa8"], "layout": "IPY_MODEL_5664184aaba84b9ba905aea5e77b47c4"}}, "8455b7440cb74501b6c7e22c78f7cc52": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_449fbf91122d49269ada3b7c9945c24c", "style": "IPY_MODEL_a21ba5f1905c4cca82c1af3c2fd14dca", "value": "<h5><b>Additional Outputs</b></h5>"}}, "449fbf91122d49269ada3b7c9945c24c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "a21ba5f1905c4cca82c1af3c2fd14dca": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "2038db803a6c4585a97aa8a051d3f206": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_f523cc23a52c4126a0e052757a3e6649", "style": "IPY_MODEL_a985a0f0273c4825942a0700d07958c8", "value": "<div>Model Type: AdaBoostClassifier</div>"}}, "f523cc23a52c4126a0e052757a3e6649": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "a985a0f0273c4825942a0700d07958c8": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "230a8dcbcba046bfb8835d6b5c4c12c9": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_2513b78e9f484a86b2291d702e1ab159", "style": "IPY_MODEL_c6da43e8cb554e8cb74ba7a62b4a6c10", "value": "<style type=\"text/css\">\n#T_985e2_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_985e2_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_985e2_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_985e2_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_985e2_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_985e2_row2_col0, #T_985e2_row2_col1, #T_985e2_row2_col2 {\n  background-color: lightblue;\n}\n</style>\n<table id=\"T_985e2_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Parameter</th>\n      <th class=\"col_heading level0 col1\" >Value</th>\n      <th class=\"col_heading level0 col2\" >Default</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_985e2_row0_col0\" class=\"data row0 col0\" >algorithm</td>\n      <td id=\"T_985e2_row0_col1\" class=\"data row0 col1\" >SAMME.R</td>\n      <td id=\"T_985e2_row0_col2\" class=\"data row0 col2\" >SAMME.R</td>\n    </tr>\n    <tr>\n      <td id=\"T_985e2_row1_col0\" class=\"data row1 col0\" >base_estimator</td>\n      <td id=\"T_985e2_row1_col1\" class=\"data row1 col1\" >None</td>\n      <td id=\"T_985e2_row1_col2\" class=\"data row1 col2\" >None</td>\n    </tr>\n    <tr>\n      <td id=\"T_985e2_row2_col0\" class=\"data row2 col0\" >learning_rate</td>\n      <td id=\"T_985e2_row2_col1\" class=\"data row2 col1\" >1.20</td>\n      <td id=\"T_985e2_row2_col2\" class=\"data row2 col2\" >1.00</td>\n    </tr>\n    <tr>\n      <td id=\"T_985e2_row3_col0\" class=\"data row3 col0\" >n_estimators</td>\n      <td id=\"T_985e2_row3_col1\" class=\"data row3 col1\" >50</td>\n      <td id=\"T_985e2_row3_col2\" class=\"data row3 col2\" >50</td>\n    </tr>\n    <tr>\n      <td id=\"T_985e2_row4_col0\" class=\"data row4 col0\" >random_state</td>\n      <td id=\"T_985e2_row4_col1\" class=\"data row4 col1\" >None</td>\n      <td id=\"T_985e2_row4_col2\" class=\"data row4 col2\" >None</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "2513b78e9f484a86b2291d702e1ab159": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c6da43e8cb554e8cb74ba7a62b4a6c10": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "86f2e7ed77ed48638906bd68b6c54aa8": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_3510feae5b8947b39057c2d0c3844995", "style": "IPY_MODEL_293d29df7a3049c3bb7f42ce577b3e4e", "value": "<div><p style=\"font-size:0.7em\"><i>Colored rows are parameters with non-default values</i></p></div>"}}, "3510feae5b8947b39057c2d0c3844995": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "293d29df7a3049c3bb7f42ce577b3e4e": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "5664184aaba84b9ba905aea5e77b47c4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d6fed14af2c94e7e9f4805767c4e514b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "bbed66f9479f47da902698adcdde948c"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.018 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_model_info.py <plot_model_info.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_model_info.ipynb <plot_model_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
